tests/files/flow_controller_tests/should_fail/010.cmdr
//Should fail due to stack overflow from infinite recursion
recurse(x) {
	return recurse(x + 1);
}
recurse(0);